--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,10 +432,10 @@ span, a, a:hover {
 }
 
 .logo {
-  padding: 15px 0;
-  width: 90px;
-  font-size: 20px;
-  font-weight: 700;
+  padding: 0;
+  width: 150px;
+  /* font-size: 20px; */
+  /* font-weight: 700; */
   color: #fff;
 }
 .logo:hover {
