--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,11 +432,8 @@ span, a, a:hover {
 }
 
 .logo {
-  padding: 0;
-  width: 150px;
-  /* font-size: 20px; */
-  /* font-weight: 700; */
-  color: #fff;
+  padding: 0px;
+  width: 125px;
 }
 .logo:hover {
   color: #fff;
@@ -671,15 +668,16 @@ span, a, a:hover {
 -----------------------------------------------------------------*/
 .services .item {
   text-align: center;
-  padding: 40px 15px;
+  padding: 0;
 }
 .services .item .icon {
   font-size: 40px;
   color: #C49B66;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .services .item h6 {
-  font-size: 22px;
+  font-family: "Open Sans", sans-serif !important;
+  font-size: 16px;
   margin-bottom: 15px;
 }
 .services .active {
@@ -705,6 +703,7 @@ span, a, a:hover {
 }
 .services .bord {
   border-bottom: 1px solid #eee;
+  margin-bottom: 10px;
 }
 
 /* ----------------------------------------------------------------
